fix styling & error cart

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,3 +77,7 @@
   justify-content: center;
   color:#000;
 }
+.type {
+  color: #fff;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
